diary-ui/src/components/Notes/notes.scss
.notes-landing-page {
    margin: 1rem 0.25rem;

    .button {
        font-size: 1rem;
        font-weight: 600;
        margin: 2rem 2rem;
        outline: none;
        padding: .5rem 1rem;
        border: none;
        border-radius: 0.5rem;
    }

    .button-container {
        display: flex;
        justify-content: flex-end;
        margin-top: -2rem;
    }

    .entry-card-container {
        width: 80%;
        margin: 0 10%;
    }

    .error-container {
        align-content: center;
        align-items: center;
        border: 2px solid rgb(235, 88, 88);
        border-radius: 1rem;
        box-shadow: 1rem .25rem 1rem 0.5rem 
            rgb(187, 186, 186);
        display: flex;
        flex-direction: column;
        max-width: 90%;
        margin: 0 5%;
        padding: 2rem;
    }

    .highlight {
        color: rgb(235, 88, 88);
        margin-left: 1rem;

        &:hover {
            background-color: rgb(238, 137, 238); 
        }
    }

    .search-box-container {
        display: flex;
        align-items: center;
        justify-content: center;
        margin-bottom: 0.5rem;
    }

    .input {
        border-radius: 1rem;
        box-shadow: 1rem .25rem 1rem 0.5rem 
            rgb(187, 186, 186);
        padding: 0 0.25rem;
    }

    .search {
        border-radius: 1rem;
        font-size: 1rem;
        height: 3rem;
        padding: 0 0.5rem;
        width: 50%;
    }

    .left {
        margin-left: 1.5rem;
    }

    .logout {
        background-color: rgb(235, 88, 88);

        &:hover {
            background-color: rgb(238, 137, 238); 
        }
    }

    .no-display {
        display: none;
    }

    .notes-layout {
        display: flex;
        justify-content: space-evenly;
    }

    .save {
        background-color: rgb(235, 88, 88);

        &:hover {
            background-color: rgb(238, 137, 238);
        }
    }

    .textArea {
        border-radius: 1rem;
        font-size: medium;
        font-weight: 500;
        width: 80%;
        margin-left: 1rem;
        padding: 1rem;
        box-shadow: 1rem 1rem 1rem 1rem
            rgb(187, 186, 186);
    }

    .textArea-container {
        max-width: 70%;
    }
    
    @media (max-width: 800px) {
        .notes-layout {
            flex-direction: column;
            gap: 2rem;
        }
    
        .textArea {
            margin: 5%;
            width: 90%;
        }
    }
}
 

